--- a/server/views/drivers/show.xml.haml
+++ b/server/views/drivers/show.xml.haml
@@ -1,7 +1,12 @@
 %driver{ :href => driver_url(@name), :id => @name }
   %name<
     = @driver[:name]
-  - driver_provider(@driver).each do |prov, details|
-    %provider{ :id => prov }
-      - details.each do |kind, url|
-        %entrypoint{ :kind => kind }<=cdata(url)
+  - if @providers.nil?
+    - driver_provider(@driver).each do |prov, details|
+      %provider{ :id => prov }
+        - details.each do |kind, url|
+          %entrypoint{ :kind => kind }<=cdata(url)
+  - else
+    - @providers.each do |p|
+      %provider{ :id => p.id }
+        %entrypoint{ :kind => p.name }<=p.url
