--- a/server/views/drivers/show.html.haml
+++ b/server/views/drivers/show.html.haml
@@ -12,9 +12,14 @@
     %li{ :'data-role' => 'list-divider'} Provider
     %li
       %p{ :'data-role' => 'fieldcontain'}
-        - providers = driver_provider(@driver).keys.collect { |k| k.to_s }.sort
-        - if providers.empty?
-          None
+        - if @providers
+          - @providers.each do |p|
+            %h3= p.id
+            %p= p.url
         - else
-          - providers.each do |k|
-            %p= k
+          - providers = driver_provider(@driver).keys.collect { |k| k.to_s }.sort
+          - if providers.empty?
+            None
+          - else
+            - providers.each do |k|
+              %p= k
