site: mention CIMI; remove link to roadmap
git-svn-id: https://svn.apache.org/repos/asf/deltacloud/trunk@1214514 13f79535-47bb-0310-9956-ffa450edef68

--- a/site/content/index.haml
+++ b/site/content/index.haml
@@ -26,10 +26,11 @@ filter: haml
       %li
         Backward compatibility across versions, providing long-term stability for scripts, tools and applications
       %li
-        Check the
-        %a{ :href => "roadmap.html", :title => "Roadmap" }
-          roadmap
-        to see what we are working on
+        A separate
+        %a{ :href => "http://dmtf.org/standards/cloud" }
+          CIMI
+        frontend, as well as CIMI API compliance tests and a simple CIMI
+        client application.
   .right
     %img{ :src => "styles/diagram-soa.png", :height => "265", :alt => "diagram-soa", :width => "620", :style => "margin-bottom:1em;" }
   %p.foot
