Add way to change provider in HTML UI /api when available JIRA DTACLOUD-105 (EC2 Regions)
Addresses https://issues.apache.org/jira/browse/DTACLOUD-105

git-svn-id: https://svn.apache.org/repos/asf/deltacloud/trunk@1226450 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/views/api/show.html.haml
+++ b/server/views/api/show.html.haml
@@ -5,3 +5,15 @@
   %ul{ :'data-role' => :listview, :'data-inset' => 'true'}
     - @collections.sort_by { |k| k.to_s }.each do |key|
       %li= link_to key.to_s.gsub('_', ' ').titlecase, api_url_for(key), :'data-icon' => "arrow-r", :'data-ajax' => false
+
+- if @providers
+  %div{ :'data-role' => :footer, :'data-theme' => 'a'}
+    %form{ :action => settings.root_url, :method => :post, :'data-ajax' => 'false'}
+      %div{ :'data-role' => :footer, :'data-theme' => 'a' , :class => 'middle-dialog'}
+        %label{ :for => :provider, :class => 'ui-input-text'}
+        %select{:name => 'provider', :'data-native-menu' => "true" }
+          %option{ :value => 'default'} default
+          - @providers.each do |provider|
+            %option{ :value => provider } #{provider}
+        %button{ :type => :submit} Change Provider
+
