Adds display of storage volumes to deltacloud show instance
git-svn-id: https://svn.apache.org/repos/asf/deltacloud/trunk@1226716 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/views/instances/show.html.haml
+++ b/server/views/instances/show.html.haml
@@ -46,6 +46,11 @@
     - if @instance.firewalls
       %li{ :'data-role' => 'list-divider'} Firewalls
       %li=@instance.firewalls.join(", ")
+    - if @instance.storage_volumes
+      %li{ :'data-role' => 'list-divider'} Attached Storage Volumes
+      -@instance.storage_volumes.each do |vol|
+        %li
+          %p{ :'data-role' => 'fieldcontain'}="#{vol.keys.first} <---> #{vol.values.first}"
     %li{ :'data-role' => 'list-divider'} Actions
     %li
       %div{ :'data-role' => 'controlgroup', :'data-type' => "horizontal" }
