--- a/server/views/api/show.html.haml
+++ b/server/views/api/show.html.haml
@@ -6,7 +6,7 @@
     - @collections.sort_by { |k| k.to_s }.each do |key|
       %li= link_to key.to_s.gsub('_', ' ').titlecase, api_url_for(key), :'data-icon' => "arrow-r", :'data-ajax' => false
 
-- if @providers
+- if @providers.size > 1
   %div{ :'data-role' => :footer, :'data-theme' => 'a'}
     %form{ :action => settings.root_url, :method => :post, :'data-ajax' => 'false'}
       %div{ :'data-role' => :footer, :'data-theme' => 'a' , :class => 'middle-dialog'}
@@ -16,4 +16,3 @@
           - @providers.each do |provider|
             %option{ :value => provider } #{provider}
         %button{ :type => :submit} Change Provider
-
