--- a/server/views/api/show.html.haml
+++ b/server/views/api/show.html.haml
@@ -9,6 +9,8 @@
 - if @providers.size > 1
   %div{ :'data-role' => :footer, :'data-theme' => 'a'}
     %form{ :action => settings.root_url, :method => :post, :'data-ajax' => 'false'}
+      - if @driver_name
+        %input{ :name => :driver, :type => :hidden, :value => @driver_name }/
       %div{ :'data-role' => :footer, :'data-theme' => 'a' , :class => 'middle-dialog'}
         %label{ :for => :provider, :class => 'ui-input-text'}
         %select{:name => 'provider', :'data-native-menu' => "true" }
