--- a/server/views/cimi/errors/500.xml.haml
+++ b/server/views/cimi/errors/500.xml.haml
@@ -1,5 +1,6 @@
 %error{:url => "#{request.env['REQUEST_URI']}", :status => "#{response.status}"}
   %kind backend_error
+  %message< #{cdata @error.message}
   %backend{ :driver => driver_symbol }
     %code=response.status
-  %message< #{cdata @error.message}
+  %backtrace< #{cdata @error.backtrace.join("\n")}
