Client: Ruby client should now forward backtrace from the server to client
Signed-off-by: Michal fojtik <mfojtik@redhat.com>

git-svn-id: https://svn.apache.org/repos/asf/deltacloud/trunk@1235273 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/views/errors/500.xml.haml
+++ b/server/views/errors/500.xml.haml
@@ -3,10 +3,9 @@
   %backend{ :driver => driver_symbol, :provider => "#{Thread::current[:provider] || ENV['API_PROVIDER'] || 'default'}" }
     %code=response.status
   %message< #{cdata @error.message}
+  - if @error.respond_to? :backtrace
+    %backtrace=cdata @error.backtrace.join("\n")
   - if params
     %request
       - params.each do |k, v|
         %param{ :name => k}=v
-  - if @error.respond_to? :backtrace
-    %backtrace=@error.backtrace.join("\n")
-
