Site: Updated RHEV-M instruction and added OpenStack and vSphere sections
git-svn-id: https://svn.apache.org/repos/asf/deltacloud/trunk@1236157 13f79535-47bb-0310-9956-ffa450edef68

--- a/site/content/_credentials.haml
+++ b/site/content/_credentials.haml
@@ -172,3 +172,19 @@ filter:
     %td
       Password
     %td
+  %tr
+    %td
+      %strong VMware vSphere
+    %td
+      %tt vsphere
+    %td vSphere user
+    %td vSphere user password
+    %td Set environment variable API_PROVIDER to the hostname of the vSphere server
+  %tr
+    %td
+      %strong OpenStack
+    %td
+      %tt openstack
+    %td OpenStack user
+    %td OpenStack user password
+    %td Set environment variable API_PROVIDER to the URL of OpenStack API entrypoint
