--- a/server/public/stylesheets/new.css
+++ b/server/public/stylesheets/new.css
@@ -55,3 +55,13 @@ p.right-float {
 .hidden_content {
   display : none;
 }
+
+fieldset#providers {
+  text-align : right;
+  padding-right : 20px;
+}
+
+fieldset#providers div.ui-select {
+  width : 97px!important;
+}
+
