--- a/server/views/api/show.html.haml
+++ b/server/views/api/show.html.haml
@@ -11,10 +11,9 @@
     %form{ :action => settings.root_url, :method => :post, :'data-ajax' => 'false'}
       - if @driver_name
         %input{ :name => :driver, :type => :hidden, :value => @driver_name }/
-      %div{ :'data-role' => :footer, :'data-theme' => 'a' , :class => 'middle-dialog'}
-        %label{ :for => :provider, :class => 'ui-input-text'}
-        %select{:name => 'provider', :'data-native-menu' => "true" }
+      %fieldset{ :'data-type' => "horizontal", :'data-role' => "controlgroup", :id => "providers" }
+        %select{:name => 'provider', :'data-inline' => 'true', :'data-native-menu' => 'false'}
           %option{ :value => 'default'} default
           - @providers.each do |provider|
             %option{ :value => provider } #{provider}
-        %button{ :type => :submit} Change Provider
+        %button{ :type => :submit, :'data-inline' => "true"} Change Provider
