site: update download links to point to TLP, not incubator

--- a/site/content/documentation.haml
+++ b/site/content/documentation.haml
@@ -44,7 +44,7 @@ The
 command will automatically fetch and install all other gems that the Deltacloud server
 needs if you don't already have these. As an alternative you can get the latest
 releases of Deltacloud from the
-%a{:href=>"http://www.apache.org/dist/incubator/deltacloud/"}
+%a{:href=>"http://www.apache.org/dist/deltacloud/"}
   Apache website.
 
 %br
@@ -556,4 +556,3 @@ for the blob called 'my_new_blob':
 Note the use of the '-iv' flags here which will ensure that cURL displays the
 request and response headers (blob metadata is reported in the response headers,
 with an empty response body).
-
