--- a/server/views/errors/502.xml.haml
+++ b/server/views/errors/502.xml.haml
@@ -1,12 +1,1 @@
-%error{:url => "#{request.env['REQUEST_URI']}", :status => "#{response.status}"}
-  %kind backend_error
-  %backend{ :driver => driver_symbol, :provider => "#{Thread::current[:provider] || ENV['API_PROVIDER'] || 'default'}" }
-  - if @error.respond_to?(:details) && @error.details
-    %details< #{cdata @error.details.join("\n")}
-  %message< #{cdata @error.message}
-  - if @error.respond_to? :backtrace
-    %backtrace=cdata @error.backtrace.join("\n")
-  - if params
-    %request
-      - params.each do |k, v|
-        %param{ :name => k}=v
+= haml :'errors/500', :locals => { :@error => @error, :partial => true }
