--- a/server/views/images/show.xml.haml
+++ b/server/views/images/show.xml.haml
@@ -1,8 +1,12 @@
 - unless defined?(partial)
   !!! XML
 %image{:href => image_url(@image.id), :id => @image.id}
-  - @image.attributes.select{ |attr| attr!=:id }.each do |attribute|
+  - @image.attributes.select{ |attr| ![:id, :hardware_profiles].include?(attr) }.each do |attribute|
     - haml_tag(attribute, :<) do
       - haml_concat @image.send(attribute)
+  - if @image.hardware_profiles
+    %hardware_profiles
+      - @image.hardware_profiles.each do |profile|
+        %hardware_profile{ :href => hardware_profile_url(profile.name), :id => profile.name, :rel => :hardware_profile }
   %actions
     %link{ :rel => 'create_instance', :method => :post, :href => "#{instances_url};image_id=#{@image.id}"}
