Minor edit to include hardware_profile CPU information in html view

--- a/server/views/hardware_profiles/index.html.haml
+++ b/server/views/hardware_profiles/index.html.haml
@@ -15,3 +15,5 @@
             = format_hardware_property profile.memory
             %strong Storage:
             = format_hardware_property profile.storage
+            %strong CPU:
+            = format_hardware_property profile.cpu
