CIMI: Fixed exception when MachineAdmin not supported in client
Display empty list for MachineAdmin in new operation inside CIMI
client if MachineAdmin is not supported by backend (like RHEV-M).

--- a/clients/cimi/views/machines/new.haml
+++ b/clients/cimi/views/machines/new.haml
@@ -43,9 +43,12 @@
         Machine Admin
       %div.input
         %select{ :name => 'machine[machine_admin]' }
-          %option{ :value => '', :selected => :selected }
-          - @machine_admins.machine_admins.each do |admin|
-            %option{ :value => admin.href }=href_to_id(admin.href)
+          - unless @machine_admins.empty?
+            %option{ :value => '', :selected => :selected }
+            - @machine_admins.machine_admins.each do |admin|
+              %option{ :value => admin.href }=href_to_id(admin.href)
+          - else
+            %option{ :disabled => 'disabled'}="Not supported"
     %div.actions
       %input{ :type => :submit, :class => 'btn primary', :value => "Create machine" }
       %button{ :type => :reset, :class => 'btn' } Reset
