Adds CDATA around limit data in returned xml of Realm

--- a/server/views/realms/show.xml.haml
+++ b/server/views/realms/show.xml.haml
@@ -7,4 +7,5 @@
     =@realm.state
   - unless @realm.limit.eql?(:unlimited)
     %limit<
-      =@realm.limit
+      =cdata do
+        =@realm.limit
