--- a/server/views/errors/400.html.haml
+++ b/server/views/errors/400.html.haml
@@ -19,7 +19,7 @@
     %h3 Backtrace
     %ul{ :'data-role' => :listview , :'data-inset' => :true, :'data-divider-theme' => 'e'}
       %li
-        %pre=@error.backtrace.join("\n")
+        %pre=(@error.backtrace.nil?) ? "n/a" : @error.backtrace.join("\n")
 
   %div{ 'data-role' => :collapsible, 'data-collapsed' => "true"}
     %h3 Parameters
