--- a/clients/cimi/views/machine_configurations/show.haml
+++ b/clients/cimi/views/machine_configurations/show.haml
@@ -23,16 +23,11 @@
     Instance. Machine Configurations are created by Providers and MAY, at the
     Providers discretion, be created by Consumers.
 
-%dl
-  %dt URI
-  %dd
-    %a{ :href => @machine_configuration.uri }=@machine_configuration.uri
-  %dt Description
-  %dd=@machine_configuration.description
-  %dt CPU
-  %dd=@machine_configuration.cpu
-  %dt Memory
-  %dd=[@machine_configuration.memory[:quantity], @machine_configuration.memory[:units]].join('&nbsp;')
-  %dt Disks
-  - @machine_configuration.disks.each do |disk|
-    %dd=[disk.capacity.quantity, disk.capacity.units].join('&nbsp;')
+- details('MachineConfiguration details') do
+  - row 'URI', @machine_configuration.uri
+  - row 'Description', @machine_configuration.description
+  - row 'Created', @machine_configuration.created
+  - row '# of CPU', @machine_configuration.cpu
+  - row 'Memory (RAM)', [@machine_configuration.memory[:quantity], @machine_configuration.memory[:units]].join('&nbsp;')
+  - row 'Storage (disks)', @machine_configuration.disks.map { |d| [ d.capacity.quantity, d.capacity.units ].join('&nbsp;') }.join(',')
+
