Core: Fixed error message for 401 XML view

--- a/server/views/errors/401.xml.haml
+++ b/server/views/errors/401.xml.haml
@@ -1,3 +1,3 @@
 %error{:url => "#{request.env['REQUEST_URI']}", :status => "#{response.status}"}
-  %message< #{cdata @error.message}
+  %message Authentication required
 
