--- a/server/views/cimi/errors/401.xml.haml
+++ b/server/views/cimi/errors/401.xml.haml
@@ -1,2 +1,2 @@
 %error{:url => "#{request.env['REQUEST_URI']}", :status => "#{response.status}"}
-  %message< #{cdata @error.message}
+  %message Authentication required
