Core: Fixed error in 501 HTML view
This view is used to notify client that given operation
is not supported by backend. In many cases this is not an
exception and thus does not have any backtrace associated.
This patch will prevent to show backtrace in browser, if there
is no backtrace in exception.

--- a/server/views/errors/501.html.haml
+++ b/server/views/errors/501.html.haml
@@ -15,11 +15,12 @@
       - else
         %em No details
 
-  %div{ 'data-role' => :collapsible, 'data-collapsed' => "true"}
-    %h3 Backtrace
-    %ul{ :'data-role' => :listview , :'data-inset' => :true, :'data-divider-theme' => 'e'}
-      %li
-        %pre=@error.backtrace.join("\n")
+  - if @error.class.method_defined? :backtrace
+    %div{ 'data-role' => :collapsible, 'data-collapsed' => "true"}
+      %h3 Backtrace
+      %ul{ :'data-role' => :listview , :'data-inset' => :true, :'data-divider-theme' => 'e'}
+        %li
+          %pre=@error.backtrace.join("\n") unless @error.backtrace.nil?
 
   %div{ 'data-role' => :collapsible, 'data-collapsed' => "true"}
     %h3 Parameters
